src/test/ui/parser/doc-before-attr.stderr
error: expected item after attributes
  --> $DIR/doc-before-attr.rs:4:16
   |
LL | #[derive(Debug)] //~ERROR expected item after attributes
   |                ^

error: aborting due to previous error

