src/test/ui/parser/doc-before-attr.rs
// compile-flags: -Z parse-only

/// hi
#[derive(Debug)] //~ERROR expected item after attributes
